<resources>
    <string name="app_name">租租微商城</string>
    <string name="hello_world">Hello world!</string>
	<string name="phone_num">请输入手机号码</string>
	<string name="password">请输入密码</string>
	<string name="forget_pwd">忘记密码？</string>
	<string name="login">登录</string>
	<string name="register">还没有账号？立即注册</string>
	<string name="phone">手机号</string>
	<string name="code">验证码</string>
	<string name="get_code">获取验证码</string>
	<string name="new_pwd">新密码</string>
	<string name="twice_pwd">确认密码</string>
	<string name="finish">完成</string>
	<string name="address_for_sure">请确认您所在的国家及地区</string>
	<string name="phone_for_get_code">此手机号用来接收验证码，请仔细填写</string>
	<string name="next">下一步</string>
    <string name="gd_go_home">Go home</string>
	<string name="gd_search">Search</string>
	<string name="gd_talk">Talk</string>
	<string name="gd_compose">Compose</string>
	<string name="gd_export">Export</string>
	<string name="gd_share">Share</string>
	<string name="gd_refresh">Refresh</string>
	<string name="gd_take_photo">Take photo</string>
	<string name="gd_locate">Locate</string>
	<string name="gd_edit">Edit</string>
	<string name="gd_add">Add</string>
	<string name="gd_star">Star</string>
	<string name="gd_sort_by_size">Sort by size</string>
	<string name="gd_sort_alpha">Sort alphabetically</string>
	<string name="gd_locate_myself">Locate myself</string>
	<string name="gd_compass">Compass</string>
	<string name="gd_help">Help</string>
	<string name="gd_info">Info</string>
	<string name="gd_settings">Settings</string>
	<string name="gd_list">List</string>
	<string name="gd_trashcan">Delete</string>
	<string name="gd_eye">See</string>
	<string name="gd_all_friends">All friends</string>
	<string name="gd_group">Group</string>
	<string name="gd_gallery">Gallery</string>
	<string name="gd_slideshow">Slideshow</string>
	<string name="gd_mail">Mail</string>
	<string name="gd_back">Back</string>
	<string name="gd_cart">Cart</string>
	<string name="open_time">营业时间</string>
    <string name="minus_price">起送价格</string>
    <string name="ledgement">--</string>
    <string name="select_cvs_tip">请选择店铺</string>
    <string name="dialog_message_title">提示</string>
    <string name="activity_login_input_user_name">请输入您的手机号</string>
    <string name="activity_login_input_user_password">请输入您的密码</string>
    <string name="activity_login_input_user_password_ensure">请确认您的密码</string>
    <string name="activity_login_input_user_password_new">请输入您的新密码</string>
    <string name="activity_login_input_user_password_ensure_new">请确认您的新密码</string>
    <string name="activity_login_input_user_verification_code">请输入您收到的验证码</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_new_user_register">新用户注册</string>
    <string name="activity_login_new_user_register_recommend">请输入推荐码（选填）</string>
    <string name="activity_login_new_user_register_recommend_prompt">注:如有推荐人,可输入推荐人账号;没有则不用输入。</string>
    <string name="activity_login_forget_password">忘记密码？</string>
    <string name="activity_login_find_password">找回密码</string>
    <string name="activity_login_register_next_step">下一步</string>
    <string name="activity_login_register_ensure">确定</string>
    <string name="activity_login_register_phone_registered">手机号码已注册</string>
    <string name="activity_login_register_phone_not_registered">该手机号码尚未注册</string>
    <string name="activity_login_register_check_phone_error">检测手机号码时出现错误，请重试</string>
    <string name="activity_login_register_input_verification_code">请输入验证码</string>
    <string name="activity_login_register_verification_code_error">验证码验证失败</string>
    <string name="activity_login_register_password_not_equal">两次输入的密码不相同</string>
    <string name="activity_login_register_register_successful">恭喜您，注册成功！</string>
    <string name="activity_login_register_register_failed">注册失败</string>
    <string name="activity_login_retrieve_verification_code_count_down">%1$d秒后重新获取验证码</string>
    <string name="activity_login_retrieve_verification_code">获取验证码</string>
    <string name="activity_login_retrieve_error_phone">请输入正确的手机号码</string>
    <string name="activity_login_retrieve_error_phone_recommend">请输入正确的推荐人账号</string>
    <string name="activity_login_retrieve_error_password">密码应包含至少6个字母或数字</string>
    <string name="activity_login_forgot_password_modify_error">密码修改失败</string>
    <string name="activity_login_login_successful">登录成功</string>
    <string name="activity_login_login_failed">登录失败</string>
    <string name="activity_login_login_account_error">用户名或密码错误</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="error_register_email_invalid">E-mai地址错误</string>
    <string name="tab_saling">全部</string>
    <string name="tab_off_shelf">待付款</string>
    <string name="tab_style">待发货</string>
     <string name="tab_style_done">待收货</string>
    <string name="more">更多</string>
    <string name="menu_order">我的订单</string>
    <string name="menu_message">我的消息</string>
    <string name="menu_fav">我的收藏</string>
    <string name="favor">收藏</string>
    <string name="menu_comment">评价和反馈</string>
    <string name="menu_setting">设置</string>
    <string name="menu_address">地址管理</string>
    <string name="menu_address_add">地址添加</string>
    <string name="menu_address_edit">地址编辑</string>
    <string name="menu_myinfo">我的账号</string>
    <string name="person_center">个人中心</string>
    <string name="settings_title">设置</string>
    <string name="settings_title_save_gprs">消息通知设置</string>
    <string name="settings_download_only_wifi">接收推送消息</string>
    <string name="settings_no_pic">通知提示音</string>
    <string name="settings_title_save_disk">缓存设置</string>
    <string name="settings_auto_delete_apk">清理缓存</string>
    <string name="settings_notify_game_app">收货地址管理</string>
    <string name="settings_check_update">服务和承诺</string>
    <string name="settings_about_app">关于</string>
    <string name="settings_logout">退出登录</string>
    <string name="settings_wifi_hint">客服热线：%1$s</string>
    <string name="main_exit_tip">再按一次退出绿蚂蚁</string>
    <string name="about_copyright">绿蚂蚁@2015#82112099</string>
    <string name="about_disclaimer">服务和承诺</string>
    <string name="versionCode">版本号：</string>
    <string name="about_funcdesc">功能介绍</string>
    <string name="about_checkupdate">检查版本更新</string>
    <string name="about_disclaimer_text">\t\t\t绿蚂蚁致力于打造中国最快的社区生活服务平台，提供生鲜、蔬菜、水果、肉类、生活用品和药品销售，商品提供送货上门和自提点自提等方式，让您轻松享受便捷、全面的社区生活服务。\n
\t\t\t绿蚂蚁承诺提供安全、健康、快速的服务体验，让您的工作和生活更加轻松惬意。</string>
    <string name="add">添加</string>
    <string name="modify">修改</string>
    <string name="name">收件人名称：</string>
    <string name="mobile">收件人电话：</string>
    <string name="uptown">小区：</string>
    <string name="door">具体门牌号：</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="failed_hint">请检查相关输入的字段，以输入的信息为配送信息，不能为空！</string>
    <string-array name="address_click_menus">
        <item>设置为默认</item>
        <item>修改</item>
        <item>删除</item>
    </string-array>
    <string name="failed_add_address">您添加的地址已经很多，请在不经常使用的地址上进行修改。</string>
    <string name="noAddressHint">您还没有添加过地址</string>
    <string name="noFavHint">您还没有收藏过商品</string>
    <string name="noMsgHint">暂没收到消息</string>
    <string name="noOrderListHint">暂无相关订单</string>
     <string name="zone_quick_buy">抢购专区</string>
     <string name="zone_new_products">新品推荐</string>
     <string name="zone_hot_sell">热销商品</string>
    <string name="detailtitle">商品详情</string>
    <string name="detailaddresstitle">当前位置：</string>
    <string name="detailaddresschange">切换</string>
    <string name="goods_list">商品列表</string>
    <string name="goods_list_sales_volume">销量</string>
    <string name="goods_list_price">价格</string>
    <string name="goods_list_new">上新</string>
    <string name="goods_list_category">分类</string>
    <string name="goods_list_no_goods">暂无商品</string>
    <string name="goods_detail_hint">如有任何疑问，欢迎咨询客服.</string>
    <string name="goods_detail_call_hint">联系客服：</string>
    <string name="goods_detail_no">暂无商品详情</string>
    <string name="no_network_hint">暂无网络，请检查网络设置</string>
    <string-array name="detail_menus">
        <item>收藏</item>
        <item>分享</item>
        <item>返回首页</item>
    </string-array>
    <string name="goods_detail_desc">此商品为需要称重类商品，根据实际称重计算价格，请留意订单的实际称重情况。</string>
    <string name="goods_detail_jin">斤</string>
    <string name="goods_detail_addcart">添加到购物车</string>
    <string name="goods_detail_addcart_already">已添加到购物车</string>
    <string name="goods_detail_addcart_modify">修改购买数量</string>
    <string name="goods_detail_fav_success">收藏成功</string>
    <string name="goods_detail_fav_failed">收藏失败</string>
    <string name="goods_detail_fav_cancel">确定要取消收藏%1$s？</string>
    <string name="goods_detail_fav_cancelsuccess">取消收藏成功</string>
    <string name="goods_detail_fav_cancelfailed">取消收藏失败</string>
    <string name="choose_city">其他城市</string>
    <string name="search_goods_name">搜索:商品名称、类型</string>
    <string name="shopping_cart">购物车</string>
    <string name="price_by_weight">称重计价</string>
    <string name="total_money">总金额：</string>
    <string name="appointment">预约</string>
    <string name="settlement">结算</string>
    <string name="discount">折</string>
    <string name="buyed_people_count">人买过</string>
    <string name="wait_weight">等待称重</string>
    <string name="tomorrow">明天</string>
    <string name="today">今天</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="select_area_search">搜索</string>
    <string name="select_area_search_search_your_receiver_uptown">搜索您的收货小区</string>
    <string name="select_area_search_prompt_input_your_uptown">输入您要搜索的小区</string>
    <string name="select_area_search_prompt_no_uptown">没有搜索到您的小区</string>
    <string name="select_area_search_prompt_load_data_error">数据加载失败</string>
    <string name="market_price">市场价 : </string>
    <string name="store_close_prompt_1">以下商品今天尚未营业，请预约配送时间</string>
    <string name="store_close_prompt_2">以下商品今天已休市，请预约配送时间</string>
    <string name="sold_out_prompt">以下商品已售罄，请预约明天购买</string>
    <string name="off_shelf_prompt">以下商品已下架，暂时不支持配送</string>
    <string name="shopping_cart_please_choose_goods_first">请先选择您要购买的商品</string>
    <string name="shopping_cart_goods_partly_store_close">您选择的部分商品已休市，需要明天送达</string>
    <string name="shopping_cart_out_of_send_time">当前时间不能即时配送</string>
    <string name="order_ensure">订单确认</string>
    <string name="order_ensure_receiver_info">收货人信息</string>
    <string name="order_ensure_modify">修改</string>
    <string name="order_ensure_receiver">收货人 : </string>
    <string name="order_ensure_phone">手机 : </string>
    <string name="order_ensure_address">地址 : </string>
    <string name="order_ensure_custom_remark">订单备注</string>
    <string name="order_ensure_custom_remark_hint">如果您有要补充说明的，请给我们留言</string>
    <string name="order_ensure_pay_and_send_info">支付和配送信息</string>
    <string name="order_ensure_pay_method">支付方式:</string>
    <string name="order_ensure_pay_method_cash_on_delivery">货到付款</string>
    <string name="order_ensure_pay_method_pay_online">在线支付</string>
    <string name="order_ensure_receiver_tel"> 电话:</string>
    <string name="order_ensure_receiver_addr"> 地址:</string>
    <string name="order_ensure_receiver_name"> 姓名:</string>
    <string name="order_ensure_send_time">送货时间:</string>
    <string name="order_ensure_send_method">送货方式:</string>
    <string name="order_ensure_send_metho_ziting">自提</string>
    <string name="order_ensure_send_metho_ziting_dian">自提点</string>
    <string name="order_ensure_send_method_songhuoshangmen">送货上门</string>
    <string name="order_ensure_send_time_right_now">即时</string>
    <string name="order_ensure_settlement_info">结算信息</string>
    <string name="order_ensure_goods_money">商品金额</string>
    <string name="order_ensure_freight">运费:</string>
    <string name="order_ensure_youhui">优惠金额:</string>
    <string name="order_minus_price">优惠金额:</string>
</resources>