<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_phone_reset"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_edittext_bg"
            android:gravity="center_vertical|left"
            android:hint="@string/phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_code"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext_bg"
                android:gravity="center_vertical|left"
                android:hint="@string/code"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/get_code"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dp"
                android:background="@drawable/shape_btn_bg"
                android:padding="10dp"
                android:text="@string/get_code"
                android:textSize="15sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_edittext_bg"
            android:gravity="center_vertical|left"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_twice_pwd"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_edittext_bg"
            android:gravity="center_vertical|left"
            android:hint="@string/twice_pwd"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register_submit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_btn_bg"
            android:text="@string/finish"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>