<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_middle"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <com.zuzoo.zuzoomart.view.ClearEditText
            android:id="@+id/et_login_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:hint="@string/phone_num"
            android:padding="10dp"
            android:background="@null"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/color_bg_main" />

        <com.zuzoo.zuzoomart.view.ClearEditText
            android:id="@+id/et_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:hint="@string/password"
            android:padding="10dp"
            android:background="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_pwd" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_btn_bg"
        android:text="@string/login"
        android:textColor="@color/white" />
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />
</RelativeLayout>
</LinearLayout>