<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_for_sure"
            android:textColor="#7b6a6f" />
        <EditText
            android:id="@+id/et_address"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_edittext_bg"
            android:gravity="center_vertical|left"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_for_get_code"
            android:layout_marginTop="10dp"
            android:textColor="#7b6a6f" />
        <EditText
            android:id="@+id/et_phone_get_code"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_edittext_bg"
            android:gravity="center_vertical|left"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="请输入手机号"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btn_register_next"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_btn_bg"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>